Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2014-01-31)
------------------

- Initial implementation.
  [jone]