@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix missing distribution buildout error.
+  [jone]
 
 
 1.0.0 (2014-01-31)
